modified html and css files to adjust alignment issues

--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ body {
 }
 
 .headline {
-  background-image: url(/img/bg-desktop.png);
+  background-image: url(Img/bg-desktop.png);
   background-repeat: no-repeat;
-  padding-top: 20%;
+  padding-top: 1%;
   background-position-x: center;
+  height: 70vh;
 }
 
 .into > h3 {
@@ -102,7 +103,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-image: url(img/cross.svg);
+  background-image: url(Img/cross.svg);
   background-repeat: repeat;
   background-color: #272a31;
   color: #d3d3d3;
@@ -376,7 +377,7 @@ header {
   background-color: #424247;
   display: flex;
   gap: 1rem;
-  margin: 1rem 0;
+  margin: 1rem 0 0;
   padding: 0 10%;
   justify-content: center;
   color: #d3d3d3;
@@ -446,7 +447,7 @@ header {
 .footer {
   display: flex;
   justify-content: center;
-  padding: 4% 0;
+  padding: 1% 0;
   gap: 2rem;
 }
 
@@ -473,11 +474,11 @@ header {
 .about-footer-section {
   background-color: #424247;
   color: #f8f8f8;
-  margin-top: 10%;
+  margin-top: 1%;
 }
 
 .about-footer-logo img {
-  content: url(Img/logo_cck_w_208x35.png);
+  content: url(Img/summit-logo.jpeg);
 }
 
 .about-footer-description {
@@ -597,7 +598,7 @@ header {
 
   .about-footer-logo img {
     width: 90%;
-    content: url(../img/logos/footer\ logo.png);
+    content: url(Img/summit-logo.jpeg);
   }
 
   .about-footer-description p {
